--- a/kubernetes/com-stouffcapital-tableau-ing-ssl.yaml
+++ b/kubernetes/com-stouffcapital-tableau-ing-ssl.yaml
@@ -3,12 +3,14 @@ kind: Ingress
 metadata:
   name: ingress-tableau
   annotations:
-    kubernetes.io/tls-acme: "true" # enable certificates
+    ingress.kubernetes.io/ssl-redirect: "true"
+    kubernetes.io/tls-acme: "true"
+    certmanager.k8s.io/issuer: letsencrypt-prod
     kubernetes.io/ingress.class: "nginx"
-    ingress.kubernetes.io/proxy-body-size: "15m"
-    nginx.org/proxy-connect-timeout: "300s"
-    nginx.org/proxy-read-timeout: "60s"
-    nginx.org/client-max-body-size: "15m"
+
+    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "120s"
 spec:
   tls:
   - hosts:
