--- a/kubernetes/com-stouffcapital-tableau-ing-ssl.yaml
+++ b/kubernetes/com-stouffcapital-tableau-ing-ssl.yaml
@@ -2,13 +2,14 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: ingress-tableau
+  namespace: tableau
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
-    certmanager.k8s.io/issuer: letsencrypt-prod
+    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/ingress.class: "nginx"
 
-    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "120s"
 spec:
@@ -27,4 +28,3 @@ spec:
         backend:
           serviceName: com-stouffcapital-tableau
           servicePort: 5000
-
