--- a/kubernetes/com-stouffcapital-tableau.yaml
+++ b/kubernetes/com-stouffcapital-tableau.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: com-stouffcapital-tableau
+  namespace: tableau
   labels:
     app: com-stouffcapital-tableau
 spec:
@@ -9,12 +10,13 @@ spec:
   - port: 5000
   selector:
     app: com-stouffcapital-tableau
-  type: NodePort
+  clusterIP: None
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: com-stouffcapital-tableau
+  namespace: tableau
   labels:
     app: com-stouffcapital-tableau
 spec:
@@ -26,7 +28,7 @@ spec:
         app: com-stouffcapital-tableau
     spec:
       containers:
-      - image: stouffcapital/com-stouffcapital-tableau
+      - image: stouffcapital/com-stouffcapital-tableau:fce4ec5
         name: com-stouffcapital-tableau
         env:
         - name: POSTGRES_HOST
