--- a/kubernetes/com-stouffcapital-tableau.yaml
+++ b/kubernetes/com-stouffcapital-tableau.yaml
@@ -67,6 +67,18 @@ spec:
             secretKeyRef:
               name: tableau
               key: github-client-secret
+        - name: S3_HOST
+          value: http://s3-minio-service.storage.svc.cluster.stouffcapital.tech:9000
+        - name: S3_ACCESSKEY
+          valueFrom:
+            secretKeyRef:
+              name: s3
+              key: s3-accesskey
+        - name: S3_SECRETKEY
+          valueFrom:
+            secretKeyRef:
+              name: s3
+              key: s3-secretkey
         ports:
         - containerPort: 5000
         volumeMounts:
